--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -11,7 +11,7 @@ button {
     padding: 10px 20px;
     margin: 5px;
     border: none;
-    background-color: #dedede;
+    /* background-color: #dedede; */
     color: #666;
 
     cursor: pointer;
